# smart-connections-mcp

./: pyproject.toml
src/smart_connections_mcp/: server.py
