[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-connections-mcp"
version = "0.1.1"
description = "MCP server for Smart Connections semantic search in Obsidian vaults"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy<2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
smart-connections-mcp = "smart_connections_mcp.server:run"

[tool.setuptools.packages.find]
where = ["src"]
